# data2skills

./: .gitignore  ARXIV_SUBMISSION.md  LICENSE  README.md  ablation_results.json  multiclass_llm_results.json  pyproject.toml  results.json
.github/workflows/: compile-paper.yml
docs/: design.md
experiments/: ablation_llm.py  breast_cancer.py  dt_simplify.py  dt_skill_multiclass.py  multi_skill_ensemble.py  multiclass_llm.py  ovr_multiclass.py  run_all.py  sle_phenotypes.py  unsupervised_demo.py
paper/: main.tex
skills/: breast_cancer_skill.json  breast_cancer_skill.md  sle_phenotypes.md  sle_phenotypes_real.md
src/: __init__.py  anonymize.py  diagnosis.py  editor.py  eval_unsupervised.py  evaluator.py  llm_diagnosis.py  optimizer.py  skill.py  unsupervised.py
